TestCases/ASTTests/SemanticErrorsTests/CreateTests/read_file_before.dot
digraph AST {
  "135973590261696" [label="Start"];
  "135973590261696" -> "135973590262368";
  "135973590262368" [label="Code"];
  "135973590262368" -> "135973590260304";
  "135973590260304" [label="Function"];
  "135973590260304" -> "135973590259344";
  "135973590260304" -> "135973590265056";
  "135973590260304" -> "135973590265632";
  "135973590259344" [label="main"];
  "135973590265056" [label="Parameters"];
  "135973590265632" [label="Code"];
  "135973590265632" -> "135973590263328";
  "135973590265632" -> "135973590406752";
  "135973590263328" [label="Code"];
  "135973590263328" -> "135973590405264";
  "135973590405264" [label="Declaration"];
  "135973590405264" -> "135973590402384";
  "135973590405264" -> "135973590404880";
  "135973590402384" [label="x"];
  "135973590404880" [label="1"];
  "135973590406752" [label="Code"];
  "135973590406752" -> "135973590402672";
  "135973590402672" [label="Declaration"];
  "135973590402672" -> "135973590405408";
  "135973590402672" -> "135973590404976";
  "135973590405408" [label="x"];
  "135973590404976" [label="2"];
}
